--- a/templates/send_code_template.html
+++ b/templates/send_code_template.html
@@ -4,9 +4,7 @@
     </div>
     <div class="content">
         <p>This is your link activation for your account </p>
-        <a href="{{ .ActivationCode }}">
-            Activation Code
-        </a>
+        {{ .ActivationCode }}
     </div>
     <div class="footer">
       <p>If you did not perform this login or have any concerns, please contact our support team.</p>
